# autopelago

./: .ansible-lint  .ansible-plugin-env  .checkov.yaml  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .shellcheckrc  .zizmor.yml  LICENCE.txt  README.markdown  README.md  ansible.cfg  deploy-stream-delta.yml  playbook.yml  pyproject.toml  python-reqs.pip  requirements.txt  requirements.yml  stream-delta.yml
.github/: dependabot.yml  super-linter.github.env  super-linter.local.env
.github/linters/: .checkov.yaml  .shellcheckrc
.github/workflows/: ansible-lint.yml  dependabot-automerge.yml  dependabot.yml  pre-commit.yml  super-linter.yml
ansible/: ansible.cfg  inventory  playbook-archipelago.retry  playbook-archipelago.yml  playbook-cenote.yml  playbook-droplet.yml  playbook-millpond.yml  playbook.yml  python-reqs.pip  requirements.yml
ansible/files/: ccooke.keys
ansible/group_vars/: all.yml
ansible/host_vars/: _example.yml  archipelago.water.gkhs.net.yml  caisson.water.gkhs.net.yml  cenote.water.gkhs.net.yml  droplet.water.gkhs.net.yml  millpond.water.gkhs.net.yml
ansible/roles/: raspi-information-radiator
aws-route53/tasks/: bromioscreations.yml  camlarp.yml  factionfiction.yml  larpme.yml  (+2 more)
certbot-scripts/: generate-archipelago-certbot.sh  generate-cenote-certbot.sh
docs/: adding-laravel-app.md  adding-sftp-hosted-site.md
etc/: inventory  inventory.ini
files/: aquarion.keys
filter_plugins/: nacl.py
group_vars/: all.yml
host_vars/: _example.yml  archipelago.water.gkhs.net.yml  atoll.water.gkhs.net  atoll.water.gkhs.net.yml  caisson.water.gkhs.net.yml  cenote.water.gkhs.net.yml  firth.water.gkhs.net.yml  millpond.water.gkhs.net.yml
maintainance-scripts/: generate-archipelago-letsencrypt.sh  generate-cenote-letsencrypt-dev.sh  generate-cenote-letsencrypt.sh  generate-millpond-letsencrypt.sh  generate-wordpress-letsencrypt.sh
nginx-sites/: default  pdforum  wordpress
(+685 files in other folders)
