[tool.poetry]
name = "autopelago"
version = "0.1.0"
description = ""
authors = ["Nicholas Avenell <nicholas@istic.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
ansible = "==13.*"
ansible-lint = { version = "==25.*", markers = "platform_system != 'Windows'" }
boto = "==2.*"
boto3 = "==1.*"
poetry = "==2.*"
poetry-plugin-export = "==1.*"
virtualenv = "==20.*"
pynacl = "^1.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
markers = "platform_system != 'Windows'"
