[tool.poetry]
name = "autopelago"
version = "0.1.0"
description = ""
authors = ["Nicholas Avenell <nicholas@istic.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
ansible = "==13.*"
ansible-lint = { version = "==26.*", markers = "platform_system != 'Windows'" }
boto = "==2.*"
boto3 = "==1.*"
poetry = "==2.*"
poetry-plugin-export = "==1.*"
virtualenv = "==20.*"
pynacl = "^1.6.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
pylint = "^4.0.4"

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
#markers = "platform_system != 'Windows'"
